--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /* importation de la police 'Poppins' de Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700;900&display=swap');
-/* Platyp */
-@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap');
-
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 html, body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -247,7 +246,7 @@ footer{
 }
 
 #review_section{
-    font-family: "playtip";
+    font-family: "Roboto";
     font-weight: bold;
     display: flex;
     flex-wrap: wrap;
